# baton

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  cli.yuck
include/: baton.h
src/: baton.c  main.c
src/internal/: args.h  baton.h  main.h
tests/: CMakeLists.txt
tests/cli/: CMakeLists.txt
tests/cli/features/: check_bitfield_argument.feature  check_id_argument.feature  check_relay_argument.feature  main.feature  parse_disable_cmd.feature  parse_enable_cmd.feature  parse_get_firmware_version_cmd.feature  parse_get_id_cmd.feature  parse_read_bitfield_cmd.feature  parse_read_cmd.feature  parse_set_id_cmd.feature  parse_toggle_bitfield_cmd.feature
tests/cli/features/step_definitions/: check_bitfield_argument.cpp  check_id_argument.cpp  check_relay_argument.cpp  main.cpp  parse_disable_cmd.cpp  parse_enable_cmd.cpp  parse_get_firmware_version_cmd.cpp  parse_get_id_cmd.cpp  parse_read_bitfield_cmd.cpp  parse_read_cmd.cpp  parse_set_id_cmd.cpp  parse_toggle_bitfield_cmd.cpp
tests/features/: baton_disable_relay.feature  baton_enable_relay.feature  baton_get_firmware_version.feature  baton_get_id.feature  baton_get_relay_status.feature  baton_get_relay_status_by_bitfield.feature  baton_init.feature  baton_set_id.feature  baton_toggle_relays_by_bitfield.feature
tests/features/step_definitions/: baton_close.cpp  baton_disable_relay.cpp  baton_enable_relay.cpp  baton_get_firmware_version.cpp  baton_get_id.cpp  baton_get_relay_status.cpp  baton_get_relay_status_by_bitfield.cpp  baton_init.cpp  baton_internal_write_command.cpp  baton_open.cpp  baton_set_id.cpp  baton_toggle_relays_by_bitfield.cpp  common.cpp  test.cpp
tests/lib/: CMakeLists.txt
tests/lib/features/: baton_close.feature  baton_get_firmware_version.feature  baton_get_relay_status_by_bitfield.feature  baton_internal_read_response.feature  baton_internal_write_command.feature  baton_open.feature  baton_toggle_relays_by_bitfield.feature
tests/lib/features/step_definitions/: baton_enable_relay.cpp  baton_get_id.cpp  baton_get_relay_status_by_bitfield.cpp  baton_internal_read_response.cpp
